<?xml version="1.0"?>
<package format="2">
  <name>marrtino_utilities</name>
  <version>0.0.0</version>
  <description>The marrtino_utilities package</description>

  <maintainer email="fabioscap@todo.todo">fabioscap</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>navigation</exec_depend>

  <exec_depend>xacro</exec_depend>

</package>
